--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,40 @@
-name: Deploy to EC2
+name: Deploy Storefront
 
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch: # Allows manual triggering
+    branches: [ "main" ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          port: ${{ secrets.EC2_PORT || 22 }}
-          script: |
-            cd /opt/medusa/storefront || cd ~/zda-store
-            git pull origin main
-            npm install
-            npm run build
-            # Restart the service (adjust based on your process manager)
-            pm2 restart medusa-storefront || systemctl restart medusa-storefront || echo "Please restart manually"
-            echo "✅ Storefront deployment completed!"
+    - name: Connect & Deploy to EC2
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_KEY }}
+        script: |
+          cd ${{ secrets.APP_PATH }}
+          
+          echo "🟡 Pulling latest updates..."
+          git fetch --all
+          git reset --hard origin/main
+
+          echo "🟡 Installing deps..."
+          corepack enable
+          yarn install --frozen-lockfile
+
+          echo "🟡 Building production..."
+          yarn build
+
+          echo "🟢 Restarting PM2..."
+          pm2 restart storefront || pm2 start "yarn start" --name storefront --port 8000
+          pm2 save
+
+          echo "🚀 Deployment complete!"
+
 
 
 
