updated store page, deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,36 @@
-name: Deploy Storefront
+name: Deploy Storefront to EC2
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Connect & Deploy to EC2
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_KEY }}
-        script: |
-          cd ${{ secrets.APP_PATH }}
-          
-          echo "🟡 Pulling latest updates..."
-          git fetch --all
-          git reset --hard origin/main
+    - name: Checkout Repo
+      uses: actions/checkout@v4
 
-          echo "🟡 Installing deps..."
-          corepack enable
-          yarn install --frozen-lockfile
+    - name: Create SSH Key
+      run: |
+        echo "$EC2_KEY" > key.pem
+        chmod 600 key.pem
 
-          echo "🟡 Building production..."
-          yarn build
-
-          echo "🟢 Restarting PM2..."
-          pm2 restart storefront || pm2 start "yarn start" --name storefront --port 8000
-          pm2 save
-
-          echo "🚀 Deployment complete!"
-
-
-
-
+    - name: Deploy to EC2 over SSH
+      run: |
+        ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST "
+          cd ~/front/zda-store &&
+          echo '🟡 Pulling latest updates...' &&
+          git fetch --all &&
+          git reset --hard origin/main &&
+          echo '🟡 Installing deps...' &&
+          corepack enable &&
+          yarn install --frozen-lockfile &&
+          echo '🟡 Building app...' &&
+          yarn build &&
+          echo '🟢 Restarting PM2...' &&
+          pm2 restart storefront || pm2 start 'yarn start' --name storefront --port 8000 &&
+          pm2 save &&
+          echo '🚀 Deployment Completed Successfully!'
+        "
