--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           yarn build
 
           echo "🟢 Restarting PM2..."
-          pm2 restart storefront || pm2 start "yarn start --port 8000" --name storefront
+          pm2 restart storefront || pm2 start "yarn dev --port 8000" --name storefront
           pm2 save
 
           echo "🚀 Deployment complete!"
