--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       env:
         EC2_HOST: ${{ secrets.EC2_HOST }}
         EC2_USER: ${{ secrets.EC2_USER }}
-        EC2_KEY:  ${{ secrets.EC2_KEY }}
+        EC2_KEY: ${{ secrets.EC2_KEY }}
         EC2_PATH: ${{ secrets.EC2_PATH }}
 
       run: |
@@ -24,22 +24,35 @@ jobs:
         chmod 600 key.pem
 
         echo "🔐 Connecting to EC2..."
-        ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << 'EOF'
-          cd /home/ubuntu/front/zda-store     # ← this must be EXACT
-          echo "🟡 Pulling latest..."
+        ssh -o StrictHostKeyChecking=no -i key.pem $EC2_USER@$EC2_HOST << EOF
+          set -e  # Exit on any error
+          
+          # Use EC2_PATH if provided, otherwise default
+          DEPLOY_PATH="${EC2_PATH:-/home/ubuntu/front/zda-store}"
+          cd "\$DEPLOY_PATH" || { echo "❌ Directory not found: \$DEPLOY_PATH"; exit 1; }
+          
+          echo "🟡 Pulling latest changes..."
           git fetch --all
           git reset --hard origin/main
-
-          echo "🟡 Installing deps..."
+          
+          echo "🟡 Installing dependencies..."
           corepack enable
           yarn install --frozen-lockfile
-
-          echo "🟡 Building..."
-          yarn build
-
-          echo "🟢 Restarting PM2..."
-          pm2 restart storefront || pm2 start "yarn start" --name storefront --cwd /home/ubuntu/front/zda-store
-
+          
+          echo "🟡 Building application..."
+          yarn build || { echo "❌ Build failed!"; exit 1; }
+          
+          echo "🟢 Restarting PM2 process..."
+          if pm2 list | grep -q "storefront"; then
+            pm2 restart storefront
+          else
+            pm2 start "yarn start" --name storefront --cwd "\$DEPLOY_PATH"
+          fi
+          
           pm2 save
+          echo "✅ Deployment completed successfully!"
         EOF
+        
+        # Clean up key file
+        rm -f key.pem
 
