--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,8 @@ jobs:
           # Delete existing errored process if it exists
           pm2 delete storefront 2>/dev/null || true
           
-          # Start PM2 with correct working directory - use yarn since project uses yarn
-          pm2 start yarn --name storefront --cwd /home/ubuntu/front/zda-store -- start
+          # Start PM2 with shell command - yarn is a shell script, not a Node.js script
+          pm2 start "yarn start" --name storefront --cwd /home/ubuntu/front/zda-store --interpreter bash
 
           pm2 save
         EOF
