--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,12 +38,8 @@ jobs:
 
           echo "🟢 Restarting PM2..."
           cd /home/ubuntu/front/zda-store
-          
-          # Delete existing errored process if it exists
-          pm2 delete storefront 2>/dev/null || true
-          
           # Start PM2 with shell command - yarn is a shell script, not a Node.js script
-          pm2 start "yarn dev" --name storefront --cwd /home/ubuntu/front/zda-store --interpreter bash
+          pm2 start "yarn start" --name FrontEnd --cwd /home/ubuntu/front/zda-store --interpreter bash
 
           pm2 save
         EOF
