--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,7 +45,22 @@ jobs:
           rm -rf .next
           rm -rf node_modules/.cache
           
-          echo "📥 Installing dependencies..."
+          echo "📥 Setting up Yarn 4.6.0 via Corepack..."
+          # Enable Corepack (try without sudo first, then with sudo if needed)
+          if ! corepack enable 2>/dev/null; then
+            echo "⚠️  Enabling Corepack with sudo..."
+            sudo corepack enable
+          fi
+          
+          # Prepare and activate Yarn 4.6.0 for this project
+          echo "📦 Preparing Yarn 4.6.0..."
+          corepack prepare yarn@4.6.0 --activate
+          
+          # Verify Yarn version
+          echo "📦 Yarn version:"
+          yarn --version
+          
+          echo "📦 Installing dependencies..."
           yarn install --frozen-lockfile --production=false
           
           echo "🏗️  Building application..."
