--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         username: ${{ secrets.EC2_USER }}
         key: ${{ secrets.EC2_KEY }}
         script: |
-          cd ${{ secrets.EC2_PATH }}
+          cd ${{ secrets.APP_PATH }}
           git pull || true
           yarn install
           pm2 start yarn --name FrontEnd run start
