--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,14 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Create target directory
+      uses: appleboy/ssh-action@v0.1.7
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_KEY }}
+        script: mkdir -p ${{ secrets.EC2_PATH }}
+
     - name: Copy files to EC2
       uses: appleboy/scp-action@v0.1.4
       with:
@@ -30,5 +38,5 @@ jobs:
         script: |
           cd ${{ secrets.APP_PATH }}
           git pull || true
-          yarn install
-          pm2 start yarn --name FrontEnd run start
+          npm install --production   # or pip install -r requirements.txt
+          pm2 restart FrontEnd || pm2 start yarn --name FrontEnd -- start
