--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,12 +44,16 @@ jobs:
           corepack prepare yarn@4.6.0 --activate || true
           yarn install --immutable
           
-          # Set required environment variables
+          # Set required environment variables BEFORE build
           BACKEND_URL="http://${{ secrets.EC2_HOST }}:9000"
-          echo "MEDUSA_BACKEND_URL=$BACKEND_URL" >> .env.local
+          export MEDUSA_BACKEND_URL="$BACKEND_URL"
+          export NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY="${{ secrets.NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY }}"
+          
+          # Create .env.local file for Next.js
+          echo "MEDUSA_BACKEND_URL=$BACKEND_URL" > .env.local
           echo "NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY }}" >> .env.local
           
-          # Build the application
+          # Build the application (will use env vars from .env.local and process.env)
           yarn build
           
           # Create PM2 ecosystem file with environment variables
@@ -59,6 +63,7 @@ jobs:
               name: 'FrontEnd',
               script: 'yarn',
               args: 'start',
+              cwd: '${{ secrets.APP_PATH }}',
               env: {
                 NODE_ENV: 'production',
                 MEDUSA_BACKEND_URL: '$BACKEND_URL',
@@ -72,3 +77,8 @@ jobs:
           pm2 delete FrontEnd 2>/dev/null || true
           pm2 start ecosystem.config.js
           pm2 save
+          
+          # Show PM2 status and logs
+          pm2 status
+          echo "=== FrontEnd PM2 Logs (last 20 lines) ==="
+          pm2 logs FrontEnd --lines 20 --nostream || true
