--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "react": "19.0.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "19.0.1",
+    "react-hook-form": "^7.68.0",
     "react-hot-toast": "^2.6.0",
     "server-only": "^0.0.1",
+    "stripe": "^20.0.0",
     "swiper": "^12.0.3",
     "tailwindcss-radix": "^2.8.0",
     "webpack": "^5"
