--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 # testing
 /coverage
 
-# 
+# next.js
 /.next/
 /out/
 
@@ -40,14 +40,11 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-
+# xata
 .tst
 .xata
 .xatarc
 
-
-.env
-
-.vercel
-
-.vercel
+# Documentation files (ignore all .md except README.md)
+*.md
+!README.md
