--- a/package.json
+++ b/package.json
@@ -4,21 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "stripe:listen": "stripe listen --forward-to http://localhost:3000/api/webhook",
     "start": "next start",
-    "lint": "next lint",
-    "import:cable-data": "tsx scripts/import-cable-data.ts",
-    "cleanup:cable-data": "tsx scripts/cleanup-cable-data.ts",
-    "setup:db": "tsx scripts/setup-local-db.ts",
-    "db:generate": "prisma generate",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.10",
-    "@portabletext/react": "^3.0.11",
-    "@prisma/client": "^6.19.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@reduxjs/toolkit": "^2.2.2",
     "@stripe/react-stripe-js": "^3.7.0",
@@ -35,8 +26,6 @@
     "next-share": "^0.27.0",
     "nextjs-toploader": "^1.6.12",
     "nodemailer": "^7.0.0",
-    "pg": "^8.11.3",
-    "prisma": "^6.19.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
@@ -53,10 +42,8 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
-    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.11.30",
     "@types/nodemailer": "^6.4.14",
-    "@types/pg": "^8.10.9",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "eslint": "^8.57.0",
