--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "stripe:listen": "stripe listen --forward-to http://localhost:3000/api/webhook",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prestart": "test -d .next && echo 'Build found' || (echo '⚠️  Build not found. Run: yarn build' && exit 1)"
   },
   "dependencies": {
     "@radix-ui/react-slider": "^1.2.0",
