--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,84 +1,129 @@
-name: Deploy Backend to EC2
+# name: Deploy Backend to EC2
+
+# on:
+#   push:
+#     branches: ["main"]   # deploys whenever you push to main
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - name: Checkout code
+#       uses: actions/checkout@v3
+
+#     - name: Create target directory
+#       uses: appleboy/ssh-action@v0.1.7
+#       with:
+#         host: ${{ secrets.EC2_HOST }}
+#         username: ${{ secrets.EC2_USER }}
+#         key: ${{ secrets.EC2_KEY }}
+#         script: mkdir -p ${{ secrets.APP_PATH }}
+
+#     - name: Copy files to EC2
+#       uses: appleboy/scp-action@v0.1.4
+#       with:
+#         host: ${{ secrets.EC2_HOST }}
+#         username: ${{ secrets.EC2_USER }}
+#         key: ${{ secrets.EC2_KEY }}
+#         source: "."
+#         target: ${{ secrets.APP_PATH }}
+
+#     - name: SSH into server and perform deploy commands
+#       uses: appleboy/ssh-action@v0.1.7
+#       with:
+#         host: ${{ secrets.EC2_HOST }}
+#         username: ${{ secrets.EC2_USER }}
+#         key: ${{ secrets.EC2_KEY }}
+#         script: |
+#           export NVM_DIR="$HOME/.nvm"
+#           [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+#           cd ${{ secrets.APP_PATH }}
+#           git pull || true
+#           corepack enable || true
+#           corepack prepare yarn@4.6.0 --activate || true
+#           yarn install --immutable
+          
+#           # Set required environment variables BEFORE build
+#           BACKEND_URL="http://${{ secrets.EC2_HOST }}:9000"
+#           export MEDUSA_BACKEND_URL="$BACKEND_URL"
+#           export NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY="${{ secrets.NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY }}"
+          
+#           # Create .env.local file for Next.js
+#           echo "MEDUSA_BACKEND_URL=$BACKEND_URL" > .env.local
+#           echo "NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY }}" >> .env.local
+          
+#           # Build the application (will use env vars from .env.local and process.env)
+#           yarn build
+          
+#           # Create PM2 ecosystem file with environment variables
+#           cat > ecosystem.config.js << EOF
+#           module.exports = {
+#             apps: [{
+#               name: 'FrontEnd',
+#               script: 'yarn',
+#               args: 'start',
+#               cwd: '${{ secrets.APP_PATH }}',
+#               env: {
+#                 NODE_ENV: 'production',
+#                 MEDUSA_BACKEND_URL: '$BACKEND_URL',
+#                 NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY: '${{ secrets.NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY }}'
+#               }
+#             }]
+#           };
+#           EOF
+          
+#           # Restart PM2
+#           pm2 delete FrontEnd 2>/dev/null || true
+#           pm2 start ecosystem.config.js
+#           pm2 save
+          
+#           # Show PM2 status and logs
+#           pm2 status
+#           echo "=== FrontEnd PM2 Logs (last 20 lines) ==="
+#           pm2 logs FrontEnd --lines 20 --nostream || true
+name: Deploy Frontend
 
 on:
   push:
-    branches: ["main"]   # deploys whenever you push to main
+    branches: [main]
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-    - name: Create target directory
-      uses: appleboy/ssh-action@v0.1.7
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_KEY }}
-        script: mkdir -p ${{ secrets.APP_PATH }}
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: yarn
 
-    - name: Copy files to EC2
-      uses: appleboy/scp-action@v0.1.4
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_KEY }}
-        source: "."
-        target: ${{ secrets.APP_PATH }}
+      - run: yarn install --frozen-lockfile
+      - run: yarn build
 
-    - name: SSH into server and perform deploy commands
-      uses: appleboy/ssh-action@v0.1.7
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_KEY }}
-        script: |
-          export NVM_DIR="$HOME/.nvm"
-          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
-          cd ${{ secrets.APP_PATH }}
-          git pull || true
-          corepack enable || true
-          corepack prepare yarn@4.6.0 --activate || true
-          yarn install --immutable
-          
-          # Set required environment variables BEFORE build
-          BACKEND_URL="http://${{ secrets.EC2_HOST }}:9000"
-          export MEDUSA_BACKEND_URL="$BACKEND_URL"
-          export NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY="${{ secrets.NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY }}"
-          
-          # Create .env.local file for Next.js
-          echo "MEDUSA_BACKEND_URL=$BACKEND_URL" > .env.local
-          echo "NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY }}" >> .env.local
-          
-          # Build the application (will use env vars from .env.local and process.env)
-          yarn build
-          
-          # Create PM2 ecosystem file with environment variables
-          cat > ecosystem.config.js << EOF
-          module.exports = {
-            apps: [{
-              name: 'FrontEnd',
-              script: 'yarn',
-              args: 'start',
-              cwd: '${{ secrets.APP_PATH }}',
-              env: {
-                NODE_ENV: 'production',
-                MEDUSA_BACKEND_URL: '$BACKEND_URL',
-                NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY: '${{ secrets.NEXT_PUBLIC_MEDUSA_PUBLISHABLE_KEY }}'
-              }
-            }]
-          };
-          EOF
-          
-          # Restart PM2
-          pm2 delete FrontEnd 2>/dev/null || true
-          pm2 start ecosystem.config.js
-          pm2 save
-          
-          # Show PM2 status and logs
-          pm2 status
-          echo "=== FrontEnd PM2 Logs (last 20 lines) ==="
-          pm2 logs FrontEnd --lines 20 --nostream || true
+      - run: tar -czf build.tar.gz .next public package.json yarn.lock
+
+      - uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "build.tar.gz"
+          target: "/home/ubuntu/front/zda-store"
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cd ~/front/zda-store
+            tar -xzf build.tar.gz
+            pm2 restart frontend || pm2 start "yarn start" --name frontend
